# hsamber

./: hsamber.cabal
Data/Biophys/Topology/Amber/: Types.hs
Data/Biophys/Topology/Amber/Data/: Atoms.hs  Defaults.hs
Data/Biophys/Topology/Amber/Params/: Types.hs
Data/Biophys/Topology/Amber/Parser/: Defaults.hs  Util.hs
references/: use.top
references/ffamber_v4.0/: ffamber_tip3p_heavy.itp  ffamber_tip4pEW.itp  ffamber_tip5p.gro  ffamber_tip5p.itp  ffamber_urea.gro  ffamber_urea.itp
references/ffamber_v4.0/README/: FAQ.html  amb2gmx.pl  dickerson.gro  dickerson.top  gcaa.gro  gcaa.top  index.html  main.css  style.css  tools.html  villin.gro  villin.top
references/ffamber_v4.0/ffamber03/: ffamber03.atp  ffamber03.itp  ffamber03.rtp  ffamber03bon.itp  ffamber03nb.itp
references/ffamber_v4.0/ffamber94/: ffamber94.atp  ffamber94.itp  ffamber94.rtp  ffamber94bon.itp  ffamber94nb.itp
references/ffamber_v4.0/ffamber96/: ffamber96.itp  ffamber96bon.itp
references/ffamber_v4.0/ffamber99/: ffamber99.itp  ffamber99bon.itp  ffamber99nb.itp
references/ffamber_v4.0/ffamber99p/: ffamber99p.atp  ffamber99p.itp  ffamber99pbon.itp
references/ffamber_v4.0/ffamber99sb/: ffamber99sb.itp  ffamber99sb.rtp  ffamber99sb.rtp.bad  ffamber99sbbon.itp  ffamber99sbbon.itp.bad
references/ffamber_v4.0/ffamberGS/: ffamberGS.itp
references/ffamber_v4.0/ffamberGSs/: ffamberGSs.itp  ffamberGSsbon.itp
references/ww-fip35/: params.agb  ww-fip35.top  wws.conf
